[ STEP 3 ] adding text and css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=gi, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="mystyle.css">
     <title>Document</title>
 </head>
 <body>
 
-    <h1>JS EXCEL</h1>
-    
-    
+    <h1>JS <span id="title-part">Sheet</span></h1>
+    <h2>Subtitle</h2>
+    <!-- lorem*3 -->
+    <p><span class="capital">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae sapiente deserunt quaerat eligendi, officiis iusto vero tempore nostrum magni aliquam. Dolor praesentium porro quas aperiam eos laudantium ratione cumque eaque!</p>
+    <p><span class="capital">L</span>orem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam sapiente ad id molestias, nulla modi nisi labore, totam earum eligendi dolore obcaecati sunt explicabo nihil, ex pariatur eius molestiae!Ad ipsam inventore quo labore perspiciatis consectetur! Earum ad reprehenderit ab hic inventore voluptatem dolore, at perspiciatis sequi necessitatibus debitis voluptatibus unde omnis deleniti, recusandae dolor nesciunt labore illum excepturi!</p>
+
 </body>
 </html>
