[ Step 7 ] morphing table

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=gi, initial-scale=1.0">
@@ -7,42 +8,73 @@
     <link rel="stylesheet" href="mystyle.css">
     <title>Document</title>
 </head>
+
 <body>
-<section class="container">
+    <section class="container">
 
-    <h1>JS <span id="title-part">Sheet</span></h1>
+        <h1>JS <span id="title-part">Sheet</span></h1>
 
-    <h2>A JS-based Sreadsheet app</h2>
+        <h2>A JS-based Sreadsheet app</h2>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Product</th>
-                <th>Cost</th>
-                <th>Price</th>
-                <th>Profit</th>
-                <th>Unit Projected</th>
-                <th>Total Sales</th>
-                <th>Total Profit</th>
-            </tr>
-        </thead>
-        <tbody>
-                <td>Chocolate Raisins</td>
-                <td>20.95</td>
-                <td>35.95</td>
-                <td>15</td>
-                <td>700</td>
-                <td>25165</td>
-                <td>10500</td>
+        <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>A</th>
+                    <th>B</th>
+                    <th>C</th>
+                    <th>E</th>
+                    <th>F</th>
+                    <th>G</th>
+                    <th>H</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Product</td>
+                    <td>Cost</td>
+                    <td>Price</td>
+                    <td>Profit</td>
+                    <td>Unit Projected</td>
+                    <td>Total Sales</td>
+                    <td>Total Profit</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Chocolate Raisins</td>
+                    <td>20.95</td>
+                    <td>35.95</td>
+                    <td>15</td>
+                    <td>700</td>
+                    <td>25165</td>
+                    <td>10500</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Chocolate Box</td>
+                    <td>15.95</td>
+                    <td>35.95</td>
+                    <td>20</td>
+                    <td>400</td>
+                    <td>14380</td>
+                    <td>8000</td>
+                    </tr>
             </tbody>
-    </table>
+        </table>
 
-    <p><span class="capital">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae sapiente deserunt quaerat eligendi, officiis iusto vero tempore nostrum magni aliquam. Dolor praesentium porro quas aperiam eos laudantium ratione cumque eaque!</p>
+        <p><span class="capital">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae sapiente
+            deserunt quaerat eligendi, officiis iusto vero tempore nostrum magni aliquam. Dolor praesentium porro quas
+            aperiam eos laudantium ratione cumque eaque!</p>
 
-    <p><span class="capital">L</span>orem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam sapiente ad id molestias, nulla modi nisi labore, totam earum eligendi dolore obcaecati sunt explicabo nihil, ex pariatur eius molestiae!Ad ipsam inventore quo labore perspiciatis consectetur! Earum ad reprehenderit ab hic inventore voluptatem dolore, at perspiciatis sequi necessitatibus debitis voluptatibus unde omnis deleniti, recusandae dolor nesciunt labore illum excepturi!</p>
+        <p><span class="capital">L</span>orem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam
+            sapiente ad id molestias, nulla modi nisi labore, totam earum eligendi dolore obcaecati sunt explicabo
+            nihil, ex pariatur eius molestiae!Ad ipsam inventore quo labore perspiciatis consectetur! Earum ad
+            reprehenderit ab hic inventore voluptatem dolore, at perspiciatis sequi necessitatibus debitis voluptatibus
+            unde omnis deleniti, recusandae dolor nesciunt labore illum excepturi!</p>
 
-</section>
+    </section>
     <!-- lorem*3 -->
-
 </body>
+
 </html>
