--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
                     <td>Total Sales</td>
                     <td>Total Profit</td>
                 </tr>
-                <tr>
+                <tr class="highlighted">
                     <td>2</td>
                     <td>Chocolate Raisins</td>
                     <td>20.95</td>
                     <td>35.95</td>
                     <td>15</td>
-                    <td>700</td>
+                    <td id="units" contenteditable="true">
+                        700</td>
                     <td>25165</td>
                     <td>10500</td>
                 </tr>
-                <tr>
+                <tr class="highlighted">
                     <td>3</td>
                     <td>Chocolate Box</td>
                     <td>15.95</td>
@@ -75,6 +76,7 @@
 
     </section>
     <!-- lorem*3 -->
+    <script src="excel.js"></script>
 </body>
 
 </html>
